--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 formatted_vectors_all.txt
 formatted_vectors_FAM.txt
 output.txt
+# ignore everything in the ./rust/target/ folder including subfolders
+rust/target/
