--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ formatted_vectors_FAM.txt
 output.txt
 # ignore everything in the ./rust/target/ folder including subfolders
 rust/target/
+rust/target/debug/
